# langgraph-terminal

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  finalizar.ps1  iniciar.ps1  pyproject.toml  run.ps1  stop.ps1  todo.md
plugins/: example_provider.py
src/langgraph_terminal/: __init__.py  config.py  main.py  reasoning.py  runtime.py  tui.py
src/langgraph_terminal/graph/: __init__.py  agent_service.py
src/langgraph_terminal/rag/: __init__.py  store.py
src/langgraph_terminal/tools/: contracts.py  providers.py  registry.py
tests/: test_agent_tracing.py  test_config_roundtrip.py  test_providers_policy.py  test_rag_lexical.py  test_reasoning.py  test_runtime_validation.py
