[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-terminal-ui"
version = "0.1.0"
description = "Terminal UI extensivel com LangChain, LangGraph, OpenAI, tools externas e RAG."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "langgraph>=0.2.35",
  "numpy>=1.26.0",
  "pypdf>=4.2.0",
  "pydantic>=2.9.0",
  "python-docx>=1.1.2",
  "python-dotenv>=1.0.1",
  "textual>=0.58.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
lg-terminal = "langgraph_terminal.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
